<resources>
    <string name="app_name">Green World</string>
    <string name="title_activity_main3">Green World</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="nolove">ฟังแค่ชื่อก็บ่งบอกถึงความนิยมชมชอบ ถ้าหากนำมาปลูกไว้ในบ้านก็จะมีแต่คนรักใคร่ สรรเสริญ
        ไม่มีศัตรูให้กวนใจ และยังช่วยป้องกันภูตผีร้ายที่จ้องจะเข้ามาทำร้ายคนในบ้าน ทั้งนี้ควรจะปลูกให้อยู่ในทิศตะวันตกเพื่อเสริมดวง
        ช่วยป้องกันมนตร์ดำไสยศาสตร์ และช่วยให้แคล้วคลาดจากคดีความทั้งหลาย วิธีปลูกให้นำเมล็ดพันธุ์ที่สมบูรณ์มาปลูกในดินร่วนซุย
        ดูแลรดน้ำทั้งเช้าและเย็น และตั้งต้นให้โดนแดด</string>

    <string name="nolove1">ผล รับประทานได้(คนเมือง,ม้ง,กะเหรี่ยงเชียงใหม่)
 เปลือกลำต้น ใช้เปลือกลำต้นสด นำมาต้มเอาน้ำกินเป็นยาแก้ไข้ แก้โรคคอตีบ แก้เยื่อปากอักเสบ เยื่อเมือกในจมูกอักเสบหรือใช้สวนล้างช่องคลอดแก้อาการตกขาว
        ใบ ใช้ใบสดประมาณ 15-30 กรัม นำมาต้มเอาน้ำกินเป็นยาแก้ลำไส้อักเสบเรื้อรัง แก้ซางตานขโมยในเด็ก แก้อืดแน่น หรือใช้ใบสดบดให้ละเอียดพอกบริเวณแผลสดหรือใช้ล้างบาดแผล
        ผล ใช้ผลสด นำมากินเป็นยาแก้คลื่นไส้ อาเจียนวิงเวียน แก้โรคเลือดออกตามไรฟัน ขับปัสสาวะ เป็นยาระบาย แก้อาการปวดเมื่อยเมื่อมีประจำเดือน แก้บิดถ่ายเป็นเลือดและใช้เป็นยาบำรุงกระเพาะอาหาร
        เมล็ดใช้เมล็ดสดประมาณ 2-3 เม็ด นำมาต้มเอาน้ำกินเป็นยาถ่ายพยาธิตัวกลม แก้ท้องร่วง แก้บิดเรื้อรัง ริดสีดวงทวาร ตกขาว ตกเลือด ท้องอืด แก้คลื่นไส้ และแก้ไอ
 มะม่วงเป็นพรรณไม้ใหญ่ ลำต้นมีเนื้อไม้เป็นสีเหลืองอ่อนนอกจากใช้เป็นสมุนไพรแล้ว ยังใช้ก่อสร้างตกแต่งภายในบ้าน หรือใช้ทำหีบกล่องได้ </string>

    <string name="nolove2">
        ผล
– แก้ไอ ขับเสมหะ และทำให้ชุ่มคอ
– ป้องกันเลือดออกตามไรฟัน
– ใช้เป็นยาระบาย ช่วยในการขับถ่าย
– ใช้ทารักษาโรคผิวหนังที่เกิดจากเชื้อรา
– ใช้ทาแก้อาการผื่นคันตามผิวหนัง
– น้ำสกัดจากผลมะยมประกอบด้วยกรดหลายชนิด ใช้ทาผิว ทาหน้า ช่วยพลัดเซลล์ผิว ทำให้ผิวแลดูขาวขึ้น
– ผลมีสารต้านอนุมูลอิสระหลายชนิด ช่วยป้องกันการเสื่อมสภาพของเซลล์ทำให้ผิวไม่แลดูแก่เกินวัย
– เสริมสร้างภูมิต้านทาน บรรเทาอาการภูมิแพ้ และป้องกันโรคจากสาเหตุภูมิแพ้
– เพิ่มความเป็นกรดในกระเพาะอาหาร กระตุ้นการยากอาหาร
        ใบ (สารคลอโรฟิลล์, แคโรทีนอยด์)
– ใช้รับประทาน ช่วยบำรุงประสาท
– ใช้ทาแก้ผื่นคันตามผิวหนัง
– ช่วยเสริมสร้างการทำงานของตับ ป้องกันพิษจากสารเคมีที่มีต่อตับ
– ป้องกันโรคมะเร้งในลำไส้ และมะเร็งต่างๆ
– กระตุ้นระบบภูมิต้านทานในร่างกาย
– ช่วยบำรุงผิวพรรณ ช่วยให้ผิวแลดูสดใส
– แมกนีเซียมที่เป็นองค์ประกอบของคลอโรฟิลล์ช่วยให้การนอนหลับง่ายขึ้น
– ช่วยป้องกันโรคโลหิตจาง เสริมสร้างความแข็งแรงของเม็ดเลือด
        ราก
– ใช้ต้มน้ำดื่มเป็นยาระบาย
– ใช้ต้มน้ำดื่มช่วยขับปัสสาวะ ช่วยขับเหงื่อ
– ใช้ต้มดื่มช่วยทำให้อาเจียน ซึ่งการออกฤทธิ์ทางยาที่ช่วยให้อาเจียนนี้ จึงนิยมใช้รากมะยมเป็นยาช่วยการออกเหล้า เพราะหลังจากดื่มน้ำที่ฝนจากรากมะยมแล้ว
        ผู้ดื่มจะเกิดอาการอาเจียนอย่างรุนแรง ทำให้ร่างกายสูญเสียน้ำมาก จนเกิดความรู้สึกกระหายน้ำ ลดอาการกระหายสุราตามมา</string>
    <string name="nolove3">ผลไม้มงคลที่ควรหามาปลูกไว้ในบ้าน นอกจากจะมีผลสด ๆ ที่สามารถเก็บกินได้แล้ว ต้นไม้มงคลชนิดนี้ยังเป็นสัญลักษณ์ของความอุดมสมบูรณ์
        ถ้าหากนำมาปลูกหน้าบ้านจะช่วยป้องกันอันตรายจากสิ่งไม่ดีให้พ้นไป ส่วนใบทับทิมเมื่อนำมาพรมน้ำมนต์ให้กับคนในบ้านหลังกลับมาจากงานศพ ก็จะช่วยป้องกันภัยให้แก่คนผู้นั้นอีกด้วย
        วิธีการปลูกให้นำเมล็ดที่สมบูรณ์มาปลูกลงในดินผสมปุ๋ยคอก ดูแลรดน้ำเพียงสัปดาห์ละ 3 ครั้ง และอย่าลืมใส่ปุ๋ยปีละ 2 ครั้ง แล้วต้นทับทิมก็จะออกผลดกและสวยพร้อมรับประทาน </string>
    <string name="nolove4">ใบ - อมกลั้วคอ ทำยาล้างตา ดอก - ใช้ห้ามเลือด
        เปลือกและผลแห้ง - เป็นยาแก้ท้องร่วง ท้องเดิน แก้บิด - แก้โรคลักกะปิดลักกะเปิด
        เปลือกต้นและเปลือกราก - ใช้เป็นยาขับพยาธิตัวตืด , พยาธิตัวกลม
        เมล็ด - แก้โรคลักกะปิดลักกะเปิด</string>
    <string name="nolove5">นอกจากพุทราจะมีรสชาติที่ถูกปากคนไทยแล้ว ยังเป็นต้นไม้มงคลแทนสัญลักษณ์ของการประสบความสำเร็จอีกด้วย ทั้งยังช่วยเสริมทรัพย์และโชคลาภ
        ป้องกันอันตรายจากอาคมไสยศาสตร์ไม่ให้มาทำร้ายคนในบ้านได้ วิธีปลูกให้นำเมล็ดที่แช่น้ำไว้แล้ว 1 คืน มาผสมในกระบะใส่ปุ๋ยคอกผสมแกลบ เพาะเมล็ดทิ้งไว้ประมาณ 7 วัน
        จนรากงอก แล้วค่อยนำไปปลูกลงในดินที่สมบูรณ์ ดูแลรดน้ำทั้งเช้าและเย็น</string>
    <string name="nolove6">สรรพคุณของพุทราพันธุ์พื้นเมืองตามตำรายาไทยคือ ใช้ผลดิบรสฝาด กินแก้ไข้ ผลสุกรสหวานฝาดเปรี้ยว กินแก้ไอ ขับเสมหะ เปลือกต้นต้มน้ำดื่ม
        แก้อาเจียนหรือท้องร่วง ใบสดตำสุมหัว แก้หวัด คัดจมูก ในเวียดนามใช้เมล็ดสด 1-2 เมล็ดหรือเมล็ดแห้ง 6-12 เมล็ด บดให้เป็นผง กินแก้อ่อนเพลีย ทำให้นอนหลับดี และใช้ใบแห้ง
        20-40 กรัม ต้นน้ำดื่มแก้หืด</string>
    <string name="nolove7">ผลไม้ที่มีประโยชน์ต่อร่างกายและเป็นผลไม้มงคลที่ถูกนำมาใช้ในพิธีการต่าง ๆ อีกทั้งหากนำมาปลูกในบ้านก็จะช่วยให้คนในบ้านอยู่เย็นเป็นสุข รักใคร่สามัคคี
        มีโชคลาภ ปลอดภัยจากอันตรายทั้งปวง วิธีปลูกให้นำต้นพันธุ์ที่สมบูรณ์และมีอายุใบในระยะแก่ มาปลูกลงดินที่อุดมสมบูรณ์ นำฟางข้าวมาคลุมดินเอาไว้ ดูแลรดน้ำให้ชุ่มแต่อย่าแฉะ
        และคอยตัดแต่งกิ่งก้านให้สวยงาม</string>
    <string name="nolove8">เปลือกผลมีสรรพคุณเป็นยาแก้ลมวิงเวียน หน้ามืด ตาลาย ใจสั่น,
    ผลมีสรรพคุณช่วยลดปริมาณของคอเลสเตอรอลในเลือด,ช่วยป้องกันไม่ให้เกิดอาการของโรคไข้หวัด,ช่วยบรรเทาอาการกระหายน้ำ,
    ใช้เป็นยาแก้ไอ ช่วยขับเสมหะ,ช่วยแก้อาการจุกเสียดแน่นหน้าอก,เมล็ดใช้เป็นยาแก้อาการปวดเต้านม เต้านมอักเสบ</string>
    <string name="nolove9"> ผลไม้ที่มีรสชาติดี สามารถนำมาปรุงอาหารได้นานาชนิด จึงเป็นที่นิยมนำมาปลูกคู่บ้านเอาไว้ และยังมีความหมายที่เป็นมงคล
        ช่วยเสริมบุคลิกให้ดูสง่าจนใคร ๆ ก็ต่างพากันเกรงขาม ให้ความเคารพยกย่อง หากนำมาปลูกไว้ในทิศตะวันตก ก็จะช่วยป้องกันวิญญาณร้ายและเรื่องอื้อฉาวให้ห่างไกลจากคนในบ้าน
        วิธีปลูกสามารถขยายพันธุ์ได้ทั้งการทาบกิ่งและเพาะเมล็ด โดยนำเมล็ดที่แช่น้ำมาปลูกในดินร่วนที่ผสมขี้เถ้าแกลบ ดูแลรดน้ำทั้งเช้าและเย็น</string>
    <string name="nolove10">เนื้อไม้ ใช้ทำเป็นเขียง ที่มีคุณภาพดีมาก เพราะเป็นไม้ทีเหนียวทนใบแก่ มีรสเปรี้ยวฝาด ใช้นำมาปรุงเป็นยาแก้ไอ แก้โรคบิดขับเสมหะในลำไส้
        หรือนำมาต้มผสมกับหัวหอมโกรกศีรษะเด็กในเวลาเช้ามืด แก้หวัดจมูกได้ หรือใช้น้ำที่ต้มให้สตรีหลังคลอดอาบและใช้อบไอน้ำได้เป็นต้น ใบอ่อนและดอก ใช้รับประทานเป็นอาหารได้
        เนื้อในผล (มะขามเปียก) ใช้ผลแก่ประมาณ 10-20 ฝักนำมาจิ้มเกลือกิน แล้วดื่มน้ำตามลงไป หรืออาจใช้ทำเป็นน้ำมะขามคั้นเอาน้ำกิน เป็นยาแก้อาการท้องผูก เป็นยาระบาย
        แก้ไอขับเสมหะ ช่วยลดอุณหภูมิในร่างกาย ลดการกระหายน้ำ หรือใช้เนื้อมะขามผสมกับข่า และเกลือพอประมาณรับประทานเป็นยาขับเลือดขับลม แก้สันนิบาตหน้าเพลิง
        หรืออาจใช้ผสมกับปูนแดง แล้วนำมาพอกหรือทาบริเวณที่เป็นกลากเกลื้อนหรือฝี เมล็ดแก่ นำมาคั่วให้เกรียมแล้วกระเทาะเปลือกออกใช้ประมาณ 20-30 เม็ด
        นำมาแช่น้ำเกลือจนอ่อนใช้กินเป็นยาถ่ายพยาธิไส้เดือนในท้องเด็กได้ หรือใช้เปลือกนอกที่กระเทาะออก ซึ่งจะมีรสฝาดใช้กินเป็นยาแก้ท้องร่วง และแก้อาเจียนได้ดี</string>
    <string name="nolove11">นอกจากจะให้ร่มเงาแล้ว เนื้อและเมล็ดของขนุนยังสามารถนำมารับประทานได้ มีรสชาติหวานและมัน
        หากนำมาปลูกไว้ในบ้านก็จะช่วยเสริมสร้างความเป็นสิริมงคลให้กับคนในบ้าน เป็นที่รักใคร่ มีคนสนับสนุนจุนเจือ ปลอดภัยจากการนินทาว่าร้ายและอันตรายทั้งปวง
        แนะนำให้ปลูกไว้ทางทิศตะวันตกเฉียงใต้ จะช่วยให้ประสบความสำเร็จในสิ่งที่ตั้งใจไว้ วิธีการปลูกให้นำต้นกล้าที่ได้จากการติดตาหรือทาบกิ่ง มาปลูกลงในดินร่วนที่ผสมปุ๋ยคอก
        คลุมดินที่โคนต้นด้วยฟางข้าวหรือหญ้าแห้ง หาไม้หลักมาปักให้ต้นยึด และดูแลรดน้ำให้ชุ่มแต่พอดี</string>
    <string name="nolove12">ผลดิบ นำไปประกอบอาหาร เช่น แกง ยำ, ผลสุก รับประทาน เป็นผลไม้(กะเหรี่ยงเชียงใหม่,กะเหรี่ยงแม่ฮ่องสอน,คนเมือง,ปะหล่อง,ม้ง),
    เมล็ด ให้ใช้ประมาณ 60-240 กรัม ต้มสุกกิน จะมีรสชุ่ม ช่วยขับน้ำนมในสตรีหลังคลอด มีน้ำนมน้อยหรือไม่มีน้ำนมช่วยบำรุงร่างกาย,
    เนื้อหุ้มเมล็ด ให้ใช้สด ผสมกับน้ำหวานกินบำรุงกำลัง หรือกินเป็นขนมก็ได้,
    ใบ ใช้สด นำมาตำให้ละเอียด อุ่นแล้วพอกแผล ใบแห้งให้บดเป็นผงโรย หรือใช้ผสมทาตรงที่เป็นแผล ใช้สำหรับภายนอก รักษาแผลมีหนองเรื้อรัง,
    ยาง จะมีรสจืด ฝาดเล็กน้อย ให้ใช้ยางสด ทาบริเวณที่บวมอักเสบ แผลมีหนองเรื้อรัง ต่อมน้ำเหลืองอักเสบเกิดจากแผล มีหนองที่ผิวหนัง,
    แกนและราก ใช้แห้งประมาณ 30-60 กรัม นำมาต้มน้ำรับประทาน จะมีรสหวานชุ่ม รักษากามโรค และบำรุงเลือด </string>
    <string name="nolove13">ผลไม้ที่มีวิตามินซีสูงและมีประโยชน์ต่อร่างกายหลายอย่าง ถ้านำมาปลูกไว้ในบ้านก็จะช่วยเสริมความเป็นสิริมงคล บารมี
        มีความเจริญก้าวหน้าในหน้าที่การงาน และยังช่วยป้องกันสิ่งชั่วร้ายจากมนตร์ดำและไสยศาสตร์ ควรปลูกไว้ทางทิศเหนือของบ้าน เพราะจะช่วยส่งเสริมความเป็นสิริมงคลให้มากขึ้น
        วิธีปลูกให้นำเมล็ดที่สมบูรณ์มาเพาะลงในดินร่วนซุย รดน้ำให้ชุ่มแต่อย่าแฉะจนเกินไป และตั้งให้โดนแดด เพราะเป็นไม้ชอบแดดจัด</string>
    <string name="nolove14">ราก นำมาต้มน้ำดื่ม แก้น้ำเหลืองเสีย แก้เลือดกำเดาไหล,
    ส่วนทั้งต้น นำมาต้มน้ำดื่มหรือทาภายนอก แก้ฝีหนอง และน้ำเหลืองในแผล ช่วยดับกลิ่น แก้โรคผิวหนัง แก้ลมพิษ แก้ผดผื่นคัน แก้อาการบวม แก้ตกเลือด แก้อาการท้องเดิน อาการท้องร่วง,
     เปลือก นำมาบดทาแผลช่วยสมานแผล และฆ่าเชื้อ นำมาต้มน้ำดื่มแก้ท้องร่วง,
    ผล รับประทานช่วยผิวพรรณแลดูสดใส เนื่องจากประกอบด้วยวิตามินหลายชนิด นอกจากนั้นช่วยในการต้านทานโรคหวัด เสริมภูมิคุ้มกัน บำรุงเหงือก และฟัน ป้องกันโรคกระดูกเสื่อม
        กระดูกพรุน ป้องกันโรคเลือดออกตามไร้ฟัน แก้ท้องผูก แก้ท้องร่วง ช่วยดับกลิ่นปาก บรรเทาอาการเจ็บคอได้,
    ใบ นำมาต้มน้ำดื่มแก้ท้องร่วง ท้องเดิน รักษาโรคกระเพาะ โรคลำไส้อักเสบ หรือนำมาบดประคบแผลช่วยห้ามเลือด และรักษาแผล ใช้ระงับกลิ่นตัว รักษาโรคผิวหนัง
        และในใบฝรั่งมีน้ำมันหอมระเหยที่สามารถระงับกลิ่นปากจากเหล้า และบุหรี่ได้ดี และยังช่วยบำรุงเหงือก และฟันด้วย</string>
    <string name="nolove15">ใคร ๆ ก็รู้ว่าต้นกล้วยสามารถใช้ประโยชน์ได้ทุกส่วน และเป็นต้นไม้ที่อยู่คู่คนไทยมานานแสนนาน ตามความเชื่อโบราณกล่าวไว้ว่า
        หากนำมาปลูกในบ้านจะทำให้ชีวิตราบรื่น สมหวังดังที่ตั้งใจไว้ทุกประการ คิดจะทำอะไรก็ง่ายไปซะหมด การปลูกกล้วยควรปลูกไว้ในทิศตะวันออก
        เพราะจะช่วยเสริมดวงเรื่องโชคลาภให้ดียิ่งขึ้นไป ขยายพันธุ์ด้วยการแยกหน่อออกมาปลูกลงในดินผสมปุ๋ยคอก กลบดินและกดให้แน่น รดน้ำให้ชุ่ม หมั่นใส่ปุ๋ย
        และอย่าลืมหาไม้หลักมาปักเพื่อค้ำลำต้นด้วยนะ</string>
    <string name="nolove16">ยาง รสฝาด สมานแผล ห้ามเลือด,ผลดิบ รสฝาด ทั้งเปลือก หั่นตากแห้ง บดเป็นผง ชงน้ำร้อนหรือปั้นเม็ดรับประทาน รักษาฃ
        แผลในกระเพาะอาหาร แก้ท้องเสียเรื้อรัง ซึ่งทำให้อาหารไม่ย่อย ผงกล้วยดิบทั้งเปลือก ใช้โรยรักษาแผลเรื้อรัง แผลเน่าเปื่อย แผลติดเชื้อต่างๆ,
    ผลสุก  รสหวาน ระบายอุจจาระ บำรุงกำลัง บำรุงร่างกาย รักษาแผลในกระเพาะอาหารเปลือกลูกดิบ  รสฝาด สมานแผล เปลือกกล้วยหอมสุก เอาด้านในทาแก้เส้นเท้าแตก,
    หัวปลี  รสฝาด แก้โรคกระเพาะอาหารลำไส้ แก้โรคโลหิตจาง ลดน้ำตาลในเลือด รักษาโรคเบาหวาน,
    ใบ  รสเย็นจืด ปิ้งไฟปิดแผลไฟไหม้ ต้มอาบแก้เม็ดผด ผื่นคัน</string>
    <string name="nolove17">ต้นไม้มงคลที่คนโบราณนิยมนำมาปลูกไว้ในบ้าน เพราะเชื่อกันว่ามะม่วงจะช่วยขับไล่สิ่งชั่วร้าย คนไม่ดี และเรื่องไม่ดีให้ออกไป
        ป้องกันคนในบ้านจากอันตรายทั้งปวง อีกทั้งหากนำไปปลูกในทิศใต้ของบ้านก็จะทำให้ฐานะร่ำรวย มีกินมีใช้ไม่ขัดสน ธุรกิจการงานเจริญรุ่งเรือง
        วิธีปลูกให้นำเมล็ดมากะเทาะเปลือกออก แล้วนำเมล็ดขาว ๆ เล็ก ๆ ด้านในไปปลูกลงในดินร่วนผสมขี้เถ้า และปุ๋ยคอก ดูแลรดน้ำให้ชุ่มแต่อย่าแฉะทั้งเช้าและเย็น
        และตั้งให้โดนแดด</string>
    <string name="nolove18">ต.โคกกรวด อ.เมือง จ.นครราชสีมา 30280 Tel : 089-9999999</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main4">Main4Activity</string>
</resources>
