<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="th.vu.cs.testminiproject.Main11Activity"
    android:orientation="vertical"
    android:background="@drawable/test1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/backgound4"
                android:id="@+id/imageView5" />

            <TabHost
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/TabHost11"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#f5e55d"/>

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#aea021">

                        <LinearLayout
                            android:id="@+id/tab1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ScrollView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical" >

                                    <TextView
                                        android:text="@string/nolove9"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/textView17"
                                        android:textStyle="normal|bold"
                                        android:textSize="24sp" />
                                </LinearLayout>
                            </ScrollView>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/tab2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ScrollView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical" >

                                    <TextView
                                        android:text="@string/nolove10"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/textView18"
                                        android:textStyle="normal|bold"
                                        android:textSize="24sp" />
                                </LinearLayout>
                            </ScrollView>
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/tab3">

                            <TextView
                                android:text="@string/nolove18"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView28"
                                android:textSize="24sp"
                                android:layout_gravity="center" />

                            <Button
                                android:text="Button"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:id="@+id/button13"
                                android:layout_gravity="center" />

                        </LinearLayout>

                    </FrameLayout>
                </LinearLayout>
            </TabHost>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
